# song-sniffa

./: LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  sniff.py  twitch_bot.py
song_sniffa/: cli.py  sniff.py
song_sniffa/utils/: audio_capturer.py  song_identifier.py
utils/: audio_capturer.py  audio_sampler.py  song_identifier.py
